# booleguru

./: .clang-format  .clangd  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  README.md
cmake/: DebianCPackOptions.cmake.in  FindANTLR.cmake  FindECL.cmake
docs/: CMakeLists.txt  Doxyfile.in  cli.rst  conf.py  development.rst  fuzzer.rst  index.rst  lua.rst  python.rst
scripts/: compile-all-dot-to-png.sh
src/: CMakeLists.txt
src/cl/: CMakeLists.txt
src/cl/include/booleguru/cl/: cl-function-c-wrappers.h  cl-function.hpp  cl-globals.hpp  ecl-wrapper.hpp
src/cl/lisp/: booleguru-cl-lisp.asd  booleguru-cl-lisp.lisp  booleguru-smtlib-parser.lisp  booleguru-wrapper.lisp
src/cl/src/: cl-function-c-wrappers.cpp  cl-function.cpp  cl-globals.cpp  ecl-wrapper.cpp
src/cl/test/: CMakeLists.txt  test-ecl-wrapper.cpp
src/cli/: CMakeLists.txt
src/cli/include/booleguru/cli/: argument.hpp  cli-processor.hpp  input_file.hpp
src/cli/src/: argument.cpp  cli-processor.cpp  input_file.cpp  main.cpp
src/cli/test/: CMakeLists.txt  test-cli-processor.cpp
src/expression/: CMakeLists.txt
src/expression/include/booleguru/expression/: binop.hpp  bv.hpp  bvop_manager.hpp  expression_graph.hpp  id.hpp  literals.hpp  manager.hpp  mutation.hpp  mutation_sampler.hpp  mutator.hpp  op.hpp  op_manager.hpp  ops_invariant_checker.hpp  quantop.hpp  quanttree.hpp  quantvec.hpp  reference.hpp  script_executor.hpp  script_manager.hpp  scriptop.hpp  unop.hpp  var_manager.hpp  varop.hpp
src/expression/src/: bvop_manager.cpp  expression.cpp  id.cpp  literals.cpp  mutation.cpp  mutation_sampler.cpp  mutator.cpp  op.cpp  op_manager.cpp  quanttree.cpp  quantvec.cpp  script_manager.cpp  var_manager.cpp
src/expression/test/: CMakeLists.txt  test-bvop.cpp  test-expression-and-inside.cpp  test-expression-traverse.cpp  test-quanttree.cpp  test-quantvec.cpp  test-user-defined-literals.cpp  test_mutation_sampler.cpp  test_mutator.cpp
src/fuzz/: CMakeLists.txt
src/fuzz/include/booleguru/fuzz/: source.hpp
src/fuzz/src/: fuzz_decode_corpus_to_ops.cpp  fuzz_entry_point.cpp  source.cpp
src/js-api/: CMakeLists.txt
src/js-api/js/: .gitignore  README.org  booleguru-handle.js  booleguru-worker.js  test.html
src/js-api/src/: js-main.cpp
src/lua/: CMakeLists.txt
src/lua/include/booleguru/lua/: binding-helpers.hpp  lua-context.hpp
src/lua/scripts/: assignment-tree.fnl  counterfactuals.lua  dd.fnl  dotter.lua  eqkbkf.lua  fennel.lua  graph-printer.lua  mean_balance_factor.lua  model-equivalent.fnl  prefixtract.lua  quantblocks.lua  quantlist.fnl  quanttree.lua  unquantified.lua
src/lua/src/: binding-helpers.cpp  lua-context-register-types.cpp  lua-context.cpp
src/lua/test/: CMakeLists.txt  test_fennel_eval.cpp  test_lua_eval.cpp
src/parse/: CMakeLists.txt
src/parse/antlr/: boole_lexer.g4  boole_parser.g4  cli_lexer.g4  cli_parser.g4  qcir_lexer.g4  qcir_parser.g4  smtlib2_lexer.g4  smtlib2_parser.g4  uvl.g4  uvl_parser.g4
src/parse/include/booleguru/parse/: aiger.hpp  base.hpp  boole.hpp  cli.hpp  error.hpp  let_map.hpp  luascript.hpp  pythonscript.hpp  qcir.hpp  qdimacs.hpp  result.hpp  sexpr-tracker.hpp  smtlib2.hpp  smtlib2_variable.hpp  type.hpp  uvl.hpp  uvl_helpers.hpp
src/parse/src/: aiger.cpp  base.cpp  boole.cpp  cli.cpp  let_map.cpp  luascript.cpp  parser-internal.hpp  pythonscript.cpp  qcir.cpp  qdimacs.cpp  smtlib2.cpp  uvl.cpp
src/parse/test/: CMakeLists.txt  test-antlr-boole-parse.cpp  test-fennel-binop.cpp  test-let-map.cpp  test-parse-aiger.cpp  test-parse-boole.cpp  test-parse-qcir.cpp  test-parse-qdimacs.cpp  test-parse-smtlib2.cpp  test-sexp-tracker.cpp
src/py/: CMakeLists.txt
src/py/include/booleguru/py/: check_sat_result.hpp  model.hpp  pyop.hpp  python-context.hpp  solver.hpp
src/py/python/examples/: z3example.py
src/py/src/: model.cpp  py_register_booleguru_types.cpp  python-context.cpp  solver.cpp
src/serialize/: CMakeLists.txt
src/serialize/include/booleguru/serialize/: base.hpp  qcir.hpp  qdimacs.hpp  smtlib2.hpp
src/serialize/src/: qcir.cpp  smtlib2.cpp
src/serialize/test/: CMakeLists.txt  test_serialize_qcir.cpp  test_serialize_qdimacs.cpp
src/solve/: CMakeLists.txt
src/solve/include/booleguru/solve/: result.hpp  sat.hpp
src/solve/src/: sat.cpp
src/solve/test/: CMakeLists.txt  test-result.cpp
src/transform/: CMakeLists.txt
src/transform/include/booleguru/transform/: and_op_on_matching.hpp  cnf.hpp  distribute_nots.hpp  distribute_ors.hpp  eliminate_equivalence.hpp  eliminate_implication.hpp  eliminate_xor.hpp  exact-1.hpp  hash_variables.hpp  minimize_failing.hpp  output_to_op.hpp  output_to_qdimacs.hpp  plaisted_greenbaum.hpp  plaisted_greenbaum_impl.hpp  polarity_extractor.hpp  prenex_quantifiers.hpp  prenex_quantifiers_optimal.hpp  quantify.hpp  tseitin.hpp  tseitin_impl.hpp  variable_extend.hpp  variable_extender.hpp  variable_rename.hpp  variable_set_i.hpp  variable_set_q.hpp  visitor.hpp
src/transform/src/: cnf.cpp  distribute_nots.cpp  distribute_ors.cpp  eliminate_equivalence.cpp  eliminate_implication.cpp  hash_variables.cpp  minimize_failing.cpp  plaisted_greenbaum.cpp  polarity_extractor.cpp  prenex_quantifiers.cpp  prenex_quantifiers_optimal.cpp  tseitin.cpp  variable_extend.cpp  variable_extender.cpp  variable_rename.cpp
src/transform/test/: CMakeLists.txt  test_eliminate_implication.cpp  test_output_to_qdimacs.cpp  test_polarity_extractor.cpp  test_prenex_quantifier.cpp  test_tseitin.cpp
src/util/: CMakeLists.txt
src/util/include/booleguru/util/: base64.hpp  bv_literal.hpp  concat.hpp  die.hpp  expect.hpp  file.hpp  inorder.hpp  is_number.hpp  istringviewstream.hpp  postorder.hpp  reverse.hpp  stdiobuf.hpp  str_replace.hpp  trim.hpp  type.hpp  unsupported.hpp  weighted_reservoir_sampler.hpp
src/util/src/: file.cpp  util.cpp
